[package]
name = "gtk-rs"
version = "0.1.0"
authors = ["Tahmid Sadik <tahmidsadik112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.0", features = ["v3_24_8"] }
gio = "0.9.0"
gdk = "0.13.0"
