[package]
name = "relm"
version = "0.1.0"
authors = ["Tahmid Sadik <tahmidsadik112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.0", features = ["v3_24_8"] }
relm = "0.20.0"
relm-derive = "0.20.0"
bincode = "1.3.1"
serde = { version="1.0.114", features = ["derive"] }
